# IMU

./: .gitignore  IMU_Tutor.org  README.md  instruction.org
DUO_IMU_CPP_PROJECT/: CMakeLists.txt  IMU.docx
DUO_IMU_CPP_PROJECT/header/: IMU.h  MathAlignment.h  Sample.h  UdpBaseBehaviour.h
DUO_IMU_CPP_PROJECT/lib/DUO3D/include/: Dense3D.h
DUO_IMU_CPP_PROJECT/matlab/: CalculateBiasError.m  IMG_acce.m  IMU_Gyo.m  finalIMU.txt  originalUnity.m
DUO_IMU_CPP_PROJECT/matlab/IMU_zero_state_calibration/: kalmanfilterIMU.txt  originalIMU.txt
DUO_IMU_CPP_PROJECT/src/: main.cpp
IMUJY901_python_client/: main.py
IMU_RESOURCES/: instruction.html
IMU_RESOURCES/img/: GyoOrientationDataFromUnity.fig  GyoRawData.eps  GyoRawData.fig  Gyo_ori_kalman_bias_compare.eps  Gyo_ori_kalman_bias_compare.fig
IMU_RESOURCES/scripts/: DUO_intrinsic.txt  IMG_acce.m  clculateIMUBiasError.m  originalIMU.txt  original_accelerator.fig  original_accelerator.txt
IMU_Unity_Server/: IMU_Unity_Server.VC.db
IMU_Unity_Server/Assets/: ImuTracking.unity
IMU_Unity_Server/Assets/Materials/: desktopbrowser.mat  liveScene.mat  pasted__phong2.mat  phong2.mat
IMU_Unity_Server/Assets/Models/: CurvedMonitor.prefab  CurvedMonitorModels.fbx
IMU_Unity_Server/Assets/scripts/: DllWrapper.cs  (+4 more)
IMU_Unity_Server/MadgwickDllLib/: CMakeLists.txt
IMU_Unity_Server/MadgwickDllLib/src/: MadgwickDllLib.cpp  MathAlignment.cpp
IMU_Unity_Server/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
JY901/: Config.ini  Data160510085452.tsv  Data160510090019.tsv  Data160510090032.tsv  Data160908054233.tsv
JY901/上位机CN/: Config.ini  Data170424063046.tsv  Data170424063224.tsv
docs/: IMU_Tutor.html  index.html  index.txt
(+8 files in other folders)
